<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021/  3/ 25.  Created by Hashim Tahir
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView6"
            style="@style/BoldTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hDistanceSpinner" />

        <TextView
            android:id="@+id/textView7"
            style="@style/_14spTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <Spinner
            android:id="@+id/hDistanceSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/unit_spinner_array"
            android:prompt="@string/share_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/BoldTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/textView2"
            style="@style/_14spTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/hLanguageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="68dp"
            android:entries="@array/language_spinner_array"
            android:prompt="@string/share_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hLanguageSpinner" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BoldTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <TextView
            android:id="@+id/hSelectTempratureTv"
            style="@style/_14spTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_temprature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Spinner
            android:id="@+id/hTempratureSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="68dp"
            android:entries="@array/language_spinner_array"
            android:prompt="@string/share_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hTempratureSpinner" />

        <TextView
            android:id="@+id/textView4"
            style="@style/BoldTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contacts_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <include
            android:id="@+id/hEnableDisableELayout"
            layout="@layout/item_settings_enable_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <include
            android:id="@+id/hAddRemoveContactsELayout"
            layout="@layout/item_settings_add_remove_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hEnableDisableELayout" />

        <include
            android:id="@+id/hEditMessageELayout"
            layout="@layout/item_settings_edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hAddRemoveContactsELayout" />

        <include
            android:id="@+id/hTestNotificationELayout"
            layout="@layout/item_settings_test_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hEditMessageELayout" />

        <TextView
            android:id="@+id/textView1"
            style="@style/BoldTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/track_me_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hTestNotificationELayout" />

        <include
            android:id="@+id/hEnableDisableTLayout"
            layout="@layout/item_settings_enable_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <include
            android:id="@+id/hAddRemoveLocationsTLayout"
            layout="@layout/item_settings_add_remove_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hEnableDisableTLayout" />

        <include
            android:id="@+id/hEditMessageTLayout"
            layout="@layout/item_settings_edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hAddRemoveLocationsTLayout" />

        <include
            android:id="@+id/hTestNotificationTLayout"
            layout="@layout/item_settings_test_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hEditMessageTLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

