<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ct_drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.MapsActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/hNormalChip"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/share_loc_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/hSatelliteChip"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/gradient_start" />

            <com.google.android.material.chip.Chip
                android:id="@+id/hMoreChip"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3dots"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/fab7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hRateUsFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:src="@drawable/ic_rateus"

                android:tint="@color/white"
                app:backgroundTint="@color/gradient_start" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hGoToLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:src="@drawable/ic_go"

                android:tint="@color/white"
                app:backgroundTint="@color/gradient_start" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hGoToMyLoaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:src="@drawable/ic_navigation"
                android:tint="@color/white"
                app:backgroundTint="@color/gradient_start" />
        </LinearLayout>

        <ImageView
            android:id="@+id/hRefreshImageView"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_refresh"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/hDetailCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/_5dp"
            android:elevation="@dimen/_8dp"
            android:padding="@dimen/_5dp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <TextView
                    android:id="@+id/hNameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/test_string"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/hGetDirectionsB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hAddressTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hNameTv"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:lines="2"
                    android:text="@string/test_string"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hGetDirectionsB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hNameTv" />

                <Button
                    android:id="@+id/hGetDirectionsB"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/route"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </FrameLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/ct_navgationView"
        android:layout_width="@dimen/_250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
